# r53

./: .gitignore  .pre-commit-config.yaml  .r53-itest.example.toml  LICENSE  PYTHON_WORKFLOW.md  README.md  pyproject.toml  r53.py
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
ThreatDragonModels/test/: test.json
tests/: conftest.py
tests/integration/: cleanup.py  cleanup_script.py  config.py  conftest.py  test_lifecycle.py
tests/unit/: test_aws_calls.py  test_cli.py  test_determine_action.py  test_get_my_ip.py  test_infer_record_type.py  test_resolve_value.py  test_validators.py
