[project]
name = "r53"
version = "1.0.0"
description = "Command-line tool for managing AWS Route 53 DNS records"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Eric Fitzgerald" },
]
dependencies = [
    "boto3>=1.35.81",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real AWS (opt-in; require config)",
]
addopts = "-m 'not integration'"
